# clawchat

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  SKILLS.md  SUGGESTIONS.md  clawchat-client.skill.md  fly.toml
.github/: clawchat-formula.rb.tmpl
.github/workflows/: release.yml
apps/ClawChatMac/: Package.swift  build-app.sh
apps/ClawChatMac/AppBundle/: Info.plist
apps/ClawChatMac/Sources/ClawChatMac/: ChatStore.swift  ClawChatConnection.swift  ClawChatMacApp.swift  ComposerTextField.swift  ContentView.swift  Models.swift
apps/ClawChatMac/Tests/ClawChatMacTests/: AppIconTests.swift  ComposerTextFieldTests.swift  LocalServerIntegrationTests.swift  ProtocolModelsTests.swift  RoomTransitionTests.swift  WindowRecoveryTests.swift
crates/clawchat-cli/: Cargo.toml
crates/clawchat-cli/src/: lantern.rs  main.rs
crates/clawchat-cli/tests/: liveness.rs
crates/clawchat-client/: Cargo.toml
crates/clawchat-client/src/: connection.rs  lib.rs
crates/clawchat-core/: Cargo.toml
crates/clawchat-core/src/: crypto.rs  error.rs  lib.rs  models.rs  protocol.rs
crates/clawchat-server/: Cargo.toml
crates/clawchat-server/src/: auth.rs  broker.rs  connection.rs  handler.rs  lib.rs  main.rs  rate_limit.rs  reconnect.rs  server.rs  store.rs  tasks.rs  voting.rs  web.rs  webhooks.rs
crates/clawchat-server/tests/: integration_tests.rs
crates/clawchat-server/web/: index.html
crates/clawdchat-cli/: Cargo.toml
crates/clawdchat-cli/src/: main.rs
crates/clawdchat-client/: Cargo.toml
crates/clawdchat-client/src/: connection.rs  lib.rs
crates/clawdchat-core/: Cargo.toml
crates/clawdchat-core/src/: error.rs  models.rs  protocol.rs
crates/clawdchat-server/: Cargo.toml
crates/clawdchat-server/src/: broker.rs  connection.rs  handler.rs  lib.rs  main.rs  rate_limit.rs  server.rs  store.rs  voting.rs  web.rs
crates/clawdchat-server/tests/: integration_tests.rs
crates/clawdchat-server/web/: index.html
examples/python/: build_together.py  clawchat.py  clawdchat.py  leader_election.py  simple_chat.py  voting.py
examples/rust/: build_together.rs  leader_election.rs  simple_chat.rs  voting.rs
skill/: SKILL.md
