[workspace]
members = [
    "crates/clawchat-core",
    "crates/clawchat-server",
    "crates/clawchat-cli",
    "crates/clawchat-client",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cbd/clawchat"

[workspace.dependencies]
clawchat-core = { path = "crates/clawchat-core" }
clawchat-server = { path = "crates/clawchat-server" }
clawchat-client = { path = "crates/clawchat-client" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
base64 = "0.22"
