[package]
name = "clawchat-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types and protocol definitions for ClawChat"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
chacha20poly1305.workspace = true
hkdf.workspace = true
sha2.workspace = true
base64.workspace = true
