[package]
name = "clawdchat-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ClawdChat CLI client"

[[bin]]
name = "clawdchat"
path = "src/main.rs"

[dependencies]
clawdchat-core.workspace = true
clawdchat-client.workspace = true
tokio.workspace = true
clap = { version = "4", features = ["derive"] }
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
directories = "5"
