[package]
name = "clawdchat-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types and protocol definitions for ClawdChat"

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
